--- a/source/prep.specs/prep.specs.csproj
+++ b/source/prep.specs/prep.specs.csproj
@@ -78,7 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MovieLibrarySpecs.cs" />
+    <Compile Include="GemLibrarySpecs.cs" />
     <Compile Include="utility\CollectionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
