--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -57,10 +57,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="collections\Genre.cs" />
-    <Compile Include="collections\Movie.cs" />
-    <Compile Include="collections\MovieLibrary.cs" />
-    <Compile Include="collections\ProductionStudio.cs" />
+    <Compile Include="collections\Gem.cs" />
+    <Compile Include="collections\GemLibrary.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
